# AI_ProblemSolving

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  README.md  main.cpp
BackEnd/Private/: Initialize.tpp  Node.tpp  Problem.tpp  Tree.tpp  Utilities.cpp
BackEnd/Private/AStar/: AStarSearchAlgorithm.cpp
BackEnd/Private/BreadthFirstSearch/: BreadthFirstSearchAlgorithm.cpp  BreadthFirstSearchPuzzleLogic.cpp  BreadthFirstSearchQueenLogic.cpp
BackEnd/Private/DepthFirstSearch/: DepthFirstSearchAlgorithm.cpp
BackEnd/Private/ProblemGenerators/Puzzle/: PuzzleGenerator.cpp  PuzzleLogic.cpp
BackEnd/Private/SimulatedAnnealing/: SimulatedAnnealingAlgorithm.cpp
BackEnd/Public/: Algorithm.hpp  Initialize.hpp  Node.hpp  NodeData.hpp  Problem.hpp  Tree.hpp
BackEnd/Public/AStar/: AStarSearchAlgorithm.hpp
BackEnd/Public/BreadthFirstSearch/: BreadthFirstSearchAlgorithm.hpp  BreadthFirstSearchPuzzleLogic.hpp  BreadthFirstSearchQueenLogic.hpp
BackEnd/Public/DepthFirstSearch/: DepthFirstSearchAlgorithm.hpp
BackEnd/Public/Problems/Puzzle/: PuzzleGenerator.hpp
BackEnd/Public/SimulatedAnnealing/: SimulatedAnnealingAlgorithm.hpp
QTUI/: WorkerThread.cpp  WorkerThread.h  mainwindow.cpp  mainwindow.h
UI/: Connect.py  UI.hiplc  start_UI.cpp
